--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
+
 body {
   background: #222;
 }
+
 .card {
   width: 90%;
   max-width: 470px;
@@ -17,12 +19,14 @@ body {
   padding: 40px 35px;
   text-align: center;
 }
+
 .search {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .search input {
   border: 0;
   outline: 0;
@@ -35,6 +39,7 @@ body {
   margin-right: 16px;
   font-size: 18px;
 }
+
 .search button {
   border: 0;
   outline: 0;
@@ -44,22 +49,27 @@ body {
   height: 60px;
   cursor: pointer;
 }
+
 .search button img {
   width: 16px;
 }
+
 .weather-icon {
   width: 170px;
   margin-top: 30px;
 }
+
 .weather h1 {
   font-size: 80px;
   font-weight: 500;
 }
+
 .weather h2 {
   font-size: 45px;
   font-weight: 400;
   margin-top: -10px;
 }
+
 .details {
   display: flex;
   align-items: center;
@@ -67,34 +77,126 @@ body {
   padding: 0 20px;
   margin-top: 50px;
 }
+
 .col {
   display: flex;
   align-items: center;
   text-align: left;
 }
+
 .col img {
   width: 40px;
   margin-right: 10px;
 }
+
 .humidity,
 .wind {
   font-size: 28px;
   margin-top: -6px;
 }
+
 .weather {
   display: none;
 }
-/* .error {
-  text-align: left;
-  margin-left: 10px;
-  font-size: 14px;
-  margin-top: 10px;
-  display: none;
-  color: rgba(67, 45, 45, 0.763);
-} */
+
 .error {
   margin-top: 10px;
   font-size: 16px;
   font-weight: bold;
   text-align: center;
+}
+
+.loading {
+  display: none;
+  text-align: center;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+  .card {
+    margin: 50px auto 0;
+    padding: 30px 20px;
+  }
+
+  .search input {
+    font-size: 16px;
+    padding: 8px 20px;
+    height: 50px;
+    margin-right: 10px;
+  }
+
+  .search button {
+    width: 50px;
+    height: 50px;
+  }
+
+  .weather-icon {
+    width: 140px;
+    margin-top: 20px;
+  }
+
+  .weather h1 {
+    font-size: 60px;
+  }
+
+  .weather h2 {
+    font-size: 35px;
+  }
+
+  .details {
+    flex-direction: column;
+    gap: 15px;
+    padding: 0;
+    margin-top: 30px;
+  }
+
+  .col img {
+    width: 30px;
+  }
+
+  .humidity,
+  .wind {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    margin: 30px auto 0;
+    padding: 20px 15px;
+  }
+
+  .search input {
+    font-size: 14px;
+    padding: 6px 15px;
+    height: 40px;
+    margin-right: 8px;
+  }
+
+  .search button {
+    width: 40px;
+    height: 40px;
+  }
+
+  .weather-icon {
+    width: 120px;
+    margin-top: 15px;
+  }
+
+  .weather h1 {
+    font-size: 50px;
+  }
+
+  .weather h2 {
+    font-size: 28px;
+  }
+
+  .details {
+    margin-top: 20px;
+  }
+
+  .humidity,
+  .wind {
+    font-size: 20px;
+  }
 }
